--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "9ed7c54b-9821-4c9c-bb86-dd0d3e44cb9c"
 authors = ["blaise-faugeras <blaise.faugeras@univ-cotedazur.fr>"]
 version = "0.1.0"
 
+[deps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
 [compat]
 julia = "^1"
 
